# maimai

./: .gitignore  README.md  csv_to_js.html  maimai_b50.py  maimai_charter.py  maimai_cross_tier.py  maimai_global.py  maimai_progress.py  maimai_rating_curve.py  maimai_recommend.py  maimai_song_game.py  maimai_song_query.py  main.py  pyproject.toml  requirements.txt
nonebot_plugin_maimai/: __init__.py  config.py  data_source.py  draw.py  game_session.py  image_utils.py
nonebot_plugin_maimai/commands/: __init__.py  cross_tier.py  guess_game.py  maimai_global.py  recommend.py  song_query.py  update.py
