[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nonebot-plugin-maimai"
version = "0.1.0"
description = "Maimai DX 数据查询与猜歌游戏 NoneBot2 插件"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["nonebot2", "maimai", "bot"]
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-adapter-onebot>=2.4.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "requests>=2.25.0",
    "prettytable>=3.0.0",
    "chardet>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
cli = [
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "Pillow>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/fengyue765/maimai"

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_maimai"]
